# Fixed-Point

./: CMakeLists.txt  README.md
include/FixedPoint/: FixedConversion.hpp  FixedPoint.hpp  utils.hpp
tests/: testFixedConversion.cpp  testFixedPoint.cpp
